# zero2prod

./: .env  1  Cargo.toml  Dockerfile  lib2.rs
.sqlx/: query-eab54567b7111647243528e961fdb11a68a6d4d3b689d75140a4c74d8b9f59e4.json
configuration/: base.yaml
scripts/: init_db.sh
src/: .telemetry.rs.swp  1  conf.rs  configuration.rs  domain_cp.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subs_email.rs  subs_name.rs
src/routes/: hc.rs  mod.rs  subs.rs
tests/: hc.rs
