[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.15"
claim = "0.5.0"
config = "0.11"
env_logger = "0.11.7"
log = "0.4.26"
once_cell = "1.21.1"
reqwest = "0.12.14"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
sqlx-cli = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
unicode-segmentation = "1"
uuid = { version = "1.16.0", features = ["v4"] }
validator = "0.14"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
