[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


[build-dependencies]
syn = "1"

[dependencies]
actix-web = "4"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
