[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[build-dependencies]
syn = "1"

[dependencies]
actix-web = "4"
chrono = "0.4.40"
config = "0.11"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"chrono",
"uuid",
"migrate"
]
